Passed access token in session

--- a/config/.env.example
+++ b/config/.env.example
@@ -3,3 +3,5 @@ AWS_SECRET_ACCESS_KEY=your_secret_access_key
 USER_POOL_ID=your_user_pool_id
 APP_CLIENT_ID=your_app_client_id
 APP_CLIENT_SECRET=your_app_client_secret
+FLASK_SECRET_KEY=your_flask_secret_key
+
