--- a/config/.env.example
+++ b/config/.env.example
@@ -4,4 +4,5 @@ USER_POOL_ID=your_user_pool_id
 APP_CLIENT_ID=your_app_client_id
 APP_CLIENT_SECRET=your_app_client_secret
 FLASK_SECRET_KEY=your_flask_secret_key
-
+AWS_REGION = your_aws_region
+S3_BUCKET_NAME = your_s3_bucket_name
